objects/Listing__c.object
<CustomObject>
    <description>The listings to be featured on the community.</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Listing_Profile__r.Company_Name__c</formula>
        <inlineHelpText>This field helps reduce code complexity in the LWC.</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Listed__c</fullName>
        <label>First Listed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Get_It_Now_Action__c</fullName>
        <label>Get It Now Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Release__c</fullName>
        <label>Latest Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Listing_Profile__c</fullName>
        <label>Listing Profile</label>
        <referenceTo>Listing_Profile__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will be populated by code because there is no master-detail relationship to listing reviews.</description>
        <inlineHelpText>This field will be populated by code because there is no master-detail relationship to listing reviews.</inlineHelpText>
        <label>Rating</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviews__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reviews</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>IDE Plugin</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Rating__c</columns>
        <columns>Reviews__c</columns>
        <columns>First_Listed__c</columns>
        <columns>Latest_Release__c</columns>
        <columns>Price__c</columns>
        <columns>Published__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Listing Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Get_It_Now_Action_for_Publishing</fullName>
        <active>true</active>
        <description>A Get It Now Action must be provided to Publish a listing to avoid errors on the Lightning component.</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Get_It_Now_Action__c, &apos;&apos;),
  Published__c==true
)</errorConditionFormula>
        <errorDisplayField>Get_It_Now_Action__c</errorDisplayField>
        <errorMessage>In Order to Publish a Listing the Get It Now Action must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_for_Publishing</fullName>
        <active>true</active>
        <description>A Price must be provided to Publish a listing to avoid errors on the Lightning component.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Price__c, &apos;&apos;),
Published__c==true
)</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>The Price must be specified in order to publish the listing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_required_for_Publishing</fullName>
        <active>true</active>
        <description>The Listing type must be specified in order to publish a listing.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Type__c, &apos;&apos;),
Published__c==true
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>The Listing Type must be specified in order to publish a listing.</errorMessage>
    </validationRules>
</CustomObject>